...
        
        Spacer()
        
        NavigationLink {
            SigninView(authenticationViewModel: authenticationViewModel, firestoreViewModel: firestoreViewModel)
        } label: {
            Text("Skip")
                .font(.system(size: 22))
                .fontWeight(.semibold)
                .frame(width: 150, height: 50)
                .background(Color.blue)
                .cornerRadius(10)
        }
...
